// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage render should disable "Verify message" button 1`] = `
<v-form
  data-test="verifying-message-form"
  v-on:submit="bound verifyMessage"
>
  <v-textarea
    data-test="signed-message-textarea"
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    class-name="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    
    Verify message
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should enable "Verify message" button 1`] = `
<v-form
  data-test="verifying-message-form"
  v-on:submit="bound verifyMessage"
>
  <v-textarea
    data-test="signed-message-textarea"
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    class-name="is-primary is-medium"
    data-test="verify-button"
  >
    
    Verify message
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should render the initial state of the component 1`] = `
<v-form
  data-test="verifying-message-form"
  v-on:submit="bound verifyMessage"
>
  <v-textarea
    data-test="signed-message-textarea"
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    class-name="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    
    Verify message
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should show the received address 1`] = `
<v-form
  data-test="verifying-message-form"
  v-on:submit="bound verifyMessage"
>
  <v-textarea
    data-test="signed-message-textarea"
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    class-name="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    
    Verify message
  
  </v-button>
   
  <div
    class="field"
    data-test="address-field"
  >
    <label
      class="label"
    >
      Address
    </label>
     
    <p>
      address
    </p>
  </div>
</v-form>
`;
